2007/09/29
	1. Added CORBA requests to display a roadmap in the interface.
	2. Added a CORBA request to optimize a path.
	3. Renamed setJointLocked into setDofLocked.

2007/09/27
	hppCorbaServer can now run with KPP interface without crashing. The CORBA interface enables a user
	  - to build a robot joint by joint and body by body,
	  - to add and move obstacles
	  - to define initial and goal configurations and
	  - to solve a problem.
	
	2. Made corrections in interface implementation ChppciRobotServer.idl to take into account the new version of KineoPathPlanner. This had not been done.
	1. Added Reeds and Shepp local steering method.
	
2007/09/26
	Create POA with PortableServer::MAIN_THREAD_MODEL as thread policy in order to make main thread process corba requests.
	
2007/09/20
	Requests of hppCorbaServer are treated sequentially in order to avoid concurrent access problems.
	
2007/09/18
	Methods loadRobotModel and loadObstacleModel of ChppciOpenHrpClient now takes as optional input the prefix where OpenHRP wrl files are installed.
	
2007/09/12
	Added request initializeProblem.
	
2007/09/10
	Added a request to create a box in obstacle server.
	
2007/09/07
	Correction of a bug in Corba request that adds a polyhedron to a list.
	
hpp-corbaserver 1.0 released August 27th, 2007.
	
	4. Replaced ChppPolyhedron by CkppKCDPolyhedron since they are the same.
	3. Replaced ChppDevice by CkppDeviceComponent since
	  1 ChppDevice derives from CkppDeviceComponent and
	  2 The operations performed on objects of this type only concern
	    CkppDeviceComponent part.
	2. Make dependence to OpenHRP conditional, as it was initially.
	1. Simplified a lot interfaces of ChppciOpenHrpClient: no more
	argc and argv. Only loadHrp2Model() has been tested.